Badge fix on small resolutions

--- a/main.css
+++ b/main.css
@@ -213,7 +213,7 @@ button[disabled] {
 }
 
 .bl-badge:hover {
-    transform: translate(0px, -60px);
+    transform: translate(0px, -40%);
     transition: all 1s ease;
     background: blue;
 }
